# practice-problems

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json
python/src/practice_problems/: climbing_stairs.py  main.py
python/tests/: test_binary_tree.py  test_climbing_stairs.py
rust/practice_problems/src/: binary_tree.rs  climbing_stairs.rs  lib.rs  remove_duplicates.rs
src/practice_problems/: binary_tree.py
