[project]
name = "practice_problems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
practice_problems = "practice_problems.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/practice_problems"]

[tool.pytest.ini_options]
addopts = [
    "-q",
    "--durations=5",
    "--ignore=acceptance_test",
    "--doctest-modules",
]
testpaths = ["src/practice_problems", "tests"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.0.0"]
